--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Avi Flax » Résumé</title>
     <style>
         /* Apparently Android browsers only got support for woff2 in September 2023 */
+        /* The values in local() are “PostScript names” that I retrieved via Font Book on MacOS. */
         @font-face {
             font-family: "Fira Code";
             font-weight: "bold";
@@ -31,7 +32,7 @@
             font-family: "Fira Sans";
             font-weight: normal;
             src:
-              local("Fira Sans"),
+              local("FiraSans-Regular"),
               url("fonts/Fira Sans/FiraSans-Regular.woff2") format(woff2),
               url("fonts/Fira Sans/FiraSans-Regular.woff") format(woff);
         }
