--- a/energy/index.html
+++ b/energy/index.html
@@ -15,8 +15,8 @@
             font-weight: "bold";
             src:
               local("FiraCodeRoman-Bold"),
-              url("fonts/Fira Code/FiraCode-Bold.woff2") format("woff2"),
-              url("fonts/Fira Code/FiraCode-Bold.woff") format("woff");
+              url("../fonts/Fira Code/FiraCode-Bold.woff2") format("woff2"),
+              url("../fonts/Fira Code/FiraCode-Bold.woff") format("woff");
         }
 
         @font-face {
@@ -24,8 +24,8 @@
             font-weight: 500;
             src:
               local("FiraSans-Medium"),
-              url("fonts/Fira Sans/FiraSans-Medium.woff2") format(woff2),
-              url("fonts/Fira Sans/FiraSans-Medium.woff") format(woff);
+              url("../fonts/Fira Sans/FiraSans-Medium.woff2") format(woff2),
+              url("../fonts/Fira Sans/FiraSans-Medium.woff") format(woff);
         }
 
         @font-face {
@@ -33,8 +33,8 @@
             font-weight: normal;
             src:
               local("FiraSans-Regular"),
-              url("fonts/Fira Sans/FiraSans-Regular.woff2") format(woff2),
-              url("fonts/Fira Sans/FiraSans-Regular.woff") format(woff);
+              url("../fonts/Fira Sans/FiraSans-Regular.woff2") format(woff2),
+              url("../fonts/Fira Sans/FiraSans-Regular.woff") format(woff);
         }
 
         @font-face {
@@ -42,8 +42,8 @@
             font-weight: bold;
             src:
               local("FiraSans-Bold"),
-              url("fonts/Fira Sans/FiraSans-Bold.woff2") format(woff2),
-              url("fonts/Fira Sans/FiraSans-Bold.woff") format(woff);
+              url("../fonts/Fira Sans/FiraSans-Bold.woff2") format(woff2),
+              url("../fonts/Fira Sans/FiraSans-Bold.woff") format(woff);
         }
 
         @font-face {
@@ -51,8 +51,8 @@
             font-style: italic;
             src:
               local("FiraSans-Italic"),
-              url("fonts/Fira Sans/FiraSans-Italic.woff2") format(woff2),
-              url("fonts/Fira Sans/FiraSans-Italic.woff") format(woff);
+              url("../fonts/Fira Sans/FiraSans-Italic.woff2") format(woff2),
+              url("../fonts/Fira Sans/FiraSans-Italic.woff") format(woff);
         }
 
         html, body {
@@ -107,6 +107,14 @@
 
         #additional-skills-technologies > ul > li {
             margin-left: 0.1em;
+        }
+
+        #objective li:first-child {
+          list-style-type: none;
+        }
+
+        #objective li {
+          list-style-type: "…";
         }
 
         h1 {
@@ -222,14 +230,16 @@
   <!-- TODO: maybe replace with “Profile” -->
   <summary><h2>Objective</h2></summary>
   
-  <ul>
+  <ol>
     <li>A <b>hands-on</b> position
     <li>practicing <b>full-cycle</b> engineering & development
-        <ul><li>including design, implementation, documentation, operations, and maintainenance</li></ul>
+        <!-- <ul><li>including design, implementation, documentation, operations, and maintainenance</li></ul> -->
     <li>of software <b>systems or tools</b>
-    <li>that have a <b>real positive impact</b>
-    <li>in <b>close collaboration</b> with my team and users
-  </ul>
+    <li>that have a <b>real positive impact</b> 
+    <li>on <b>the energy transition</b>
+    <li>and a contribution to <b>climate change mitigation</b>
+    <li>in <b>close collaboration</b> with my team and users.
+  </ol>
 </details>
 
 <!--
@@ -596,7 +606,7 @@
         </li>
         <li>My last major project for Arc90 was to build a new platform for reuters.com:
             <ul>
-                <li>I created <a href="platform-architecture.png">a diagram</a> of the overall architecture of the “Reuters Next” platform</li>
+                <li>I created <a href="../platform-architecture.png">a diagram</a> of the overall architecture of the “Reuters Next” platform</li>
                 <li>I was asked to review a draft of the API spec; I provided <a href="https://gist.github.com/20df21ec725c05a2a199">these notes</a></li>
                 <li>I developed <a href="https://gist.github.com/8c72e7a636bdb09ee555">a document</a> to capture the culture and process of my team, so we could ramp new members up quickly and effectively</li>
                 <li>I determined that the API codebase I had inherited needed to be refactored, and wrote <a href="https://gist.github.com/aviflax/a7b0c12b2173ce523685">this summary</a> to explain why</li>
