--- a/energy/index.html
+++ b/energy/index.html
@@ -109,14 +109,6 @@
             margin-left: 0.1em;
         }
 
-        #objective li:first-child {
-          list-style-type: none;
-        }
-
-        #objective li {
-          list-style-type: "…";
-        }
-
         h1 {
             font-family: "Fira Code";
             font-weight: bold;
@@ -230,16 +222,31 @@
   <!-- TODO: maybe replace with “Profile” -->
   <summary><h2>Objective</h2></summary>
   
-  <ol>
-    <li>A <b>hands-on</b> position
-    <li>practicing <b>full-cycle</b> engineering & development
-        <!-- <ul><li>including design, implementation, documentation, operations, and maintainenance</li></ul> -->
-    <li>of software <b>systems or tools</b>
-    <li>that have a <b>real positive impact</b> 
-    <li>on <b>the energy transition</b>
-    <li>and a contribution to <b>climate change mitigation</b>
-    <li>in <b>close collaboration</b> with my team and users.
-  </ol>
+  <h3><b>What kind of work</b> I want to do</h3>
+
+  <ul>
+    <li>Hands-on
+    <li>Full-cycle (design, testing, implementation, documentation, deployment, operations, maintenance, etc)
+    <li>Highly collaborative (with co-workers, users, customers, etc)
+    <li>Leading by example
+  </ul>
+
+  <h3>On <b>what kind of software</b></h3>
+  <ul>
+    <li>Anything with a <b>direct positive impact</b> on
+      <script>
+        document.write(
+          document.URL.includes('energy') || document.URL.includes('climate')
+          ? '<b>the energy transition</b>'
+          : 'the organization')
+      </script>
+  </ul>
+
+  <h3>At <b>what kind of org</b></h3>
+
+  <ul>
+    <li>TO DO
+  </ul>
 </details>
 
 <!--
