--- a/index.html
+++ b/index.html
@@ -96,13 +96,7 @@
         }
 
         #additional-skills-technologies > ul, #key-technologies > ul, #around-the-web > ul {
-            -column-count: 2;
-            -column-gap: 10px;
-            -webkit-column-count: 2;
-            -webkit-column-gap: 10px;
-            -moz-column-count: 2;
-            -moz-column-gap: 10px;
-            list-style-position: inside;
+            columns: 2;
         }
 
         #additional-skills-technologies > ul > li {
