--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
     <!-- Thanks for checking out my HTML and CSS skillz! This is all hand-rolled, fwiw. -->
     
-    <title>Avi Flax » Résumé</title>
+    <title>Avi Flax » Experienced full-cycle software engineer</title>
     <style>
         /* Apparently Android browsers only got support for woff2 in September 2023 */
         /* The values in local() are “PostScript names” that I retrieved via Font Book on MacOS. */
@@ -108,13 +108,22 @@
             font-weight: bold;
         }
 
-        h2 {
-            font-family: "Fira Sans";
+        h2,h3,h4,h5 {
             font-weight: normal;
+            break: avoid-page;
         }
 
-        h3,h4,h5 {
-            font-weight: normal;
+        body > details > summary::marker, body > details> summary::-webkit-details-marker {
+          /* This is the same as the computed size of the h2 elems I have under the summary, and
+             this helps keep the marker aligned vertically with the text in the h2. It results in
+             the marker being kinda huge, but I can live with that. Anyway it’s better than the
+             default, which is a little too small. */
+          font-size: 30px;
+        }
+
+        details, section {
+          break-inside: avoid;
+          page-break-inside: avoid;
         }
 
         #name {
@@ -192,8 +201,9 @@
 
         /* I have a bit of an idea what I’m doing. */
         @media print {
-          body {
-            font-size: 12pt;
+          html, body {
+            /* The !important is an attempt to address the font size being huge in Firefox. */
+            font-size: 12pt !important; 
             margin: 0 auto;
             padding-left: 5%;
             padding-right: 5%;
@@ -239,7 +249,10 @@
   <h3>At <b>what kind of org</b></h3>
 
   <ul>
-    <li>TO DO
+    <li>Mission-driven
+    <li>People-first
+    <li>With clearly articulated values
+    <li>
   </ul>
 </details>
 
@@ -463,22 +476,23 @@
     </section>
 </details>
 
-<section id="statements">
-    <details>
-      <summary><h2>Values</h2></summary>
-      <h3>I believe that:</h3>
-      <ul class="statements">
-        <li>diversity and inclusion are crucial <i>and</i> create rich, healthy, sustainable, productive organizations.</li>
-        <li><a href="https://en.wikipedia.org/wiki/Don%27t_repeat_yourself">DRY</a> and <a href="https://en.wikipedia.org/wiki/Rule_of_three_(computer_programming)">the Rule of Three</a> apply to docs just as much as code.</li>
-        <li>people can only do great work if they are healthy, growing, supported, and respected.</li>
-        <li>all great processes have one thing in common: they are regularly reviewed and refined.</li>
-        <li>the most important aspect of any technology is its potential to solve problems.</li>
-        <li>technology is a phenomenally powerful tool that we humans have at our disposal to solve problems — if we so choose.</li>
-        <li>we do some of our best thinking in collaboration with others.</li>
-        <li>institutional/communal memory is critical to building sustainable organizations.</li>
-      </ul>
-    </details>
-</section>
+
+<!-- TODO: revisit this. It’s… not great. -->
+<details>
+  <summary><h2>Values</h2></summary>
+  <h3>I believe that:</h3>
+  <ul class="statements">
+    <li>diversity and inclusion are crucial <i>and</i> create rich, healthy, sustainable, productive organizations.</li>
+    <li><a href="https://en.wikipedia.org/wiki/Don%27t_repeat_yourself">DRY</a> and <a href="https://en.wikipedia.org/wiki/Rule_of_three_(computer_programming)">the Rule of Three</a> apply to docs just as much as code.</li>
+    <li>people can only do great work if they are healthy, growing, supported, and respected.</li>
+    <li>all great processes have one thing in common: they are regularly reviewed and refined.</li>
+    <li>the most important aspect of any technology is its potential to solve problems.</li>
+    <li>technology is a phenomenally powerful tool that we humans have at our disposal to solve problems — if we so choose.</li>
+    <li>we do some of our best thinking in collaboration with others.</li>
+    <li>institutional/communal memory is critical to building sustainable organizations.</li>
+  </ul>
+</details>
+
 
 <details id="key-skills">
     <summary><h2>Key Skills</h2></summary>
