--- a/index.html
+++ b/index.html
@@ -248,11 +248,14 @@
 
   <h3>At <b>what kind of org</b></h3>
 
+<h1>TODO: FINISH</h1>
   <ul>
     <li>Mission-driven
     <li>People-first
     <li>With clearly articulated values
-    <li>
+    <li>A mature culture
+    <li>Knowlege sharing is via artifacts (documents, pages, etc) rather than conversations (email, chat, verbal)
+    <li>Invests in stability, sustainability, reliability, etc.
   </ul>
 </details>
 
