--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
             font-weight: bold;
         }
 
-        h2,h3,h4,h5 {
-            font-weight: normal;
+        h2, h3, h4, h5 {
+            font-weight: 500;
             break: avoid-page;
         }
 
@@ -226,7 +226,7 @@
   <!-- TODO: maybe replace with “Profile” -->
   <summary><h2>Objective</h2></summary>
   
-  <h3><b>What kind of work</b> I want to do</h3>
+  <h3>What kind of work I want to do</h3>
 
   <ul>
     <li>Hands-on
@@ -235,25 +235,24 @@
     <li>Leading by example
   </ul>
 
-  <h3>On <b>what kind of software</b></h3>
+  <h3>On what kind of software</h3>
   <ul>
     <li>Anything with a <b>direct positive impact</b> on
       <script>
         document.write(
           document.URL.includes('energy') || document.URL.includes('climate')
           ? '<b>the energy transition</b>'
-          : 'the organization')
+          : 'its users and the organization')
       </script>
   </ul>
 
-  <h3>At <b>what kind of org</b></h3>
-
-<h1>TODO: FINISH</h1>
+  <h3>At what kind of org</h3>
   <ul>
     <li>Mission-driven
     <li>People-first
-    <li>With clearly articulated values
-    <li>A mature culture
+    <li>Committed to diversity &amp; inclusion
+    <li>Enshrines kindness as cardinal
+    <li>A shared understanding that candid and timely critisicm/feedback is a gift
     <li>Knowlege sharing is via artifacts (documents, pages, etc) rather than conversations (email, chat, verbal)
     <li>Invests in stability, sustainability, reliability, etc.
   </ul>
