--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <title>Avi Flax » Experienced full-cycle software engineer</title>
     <style>
-        /* Apparently Android browsers only got support for woff2 in September 2023 */
+        /* Apparently Android browsers only got support for woff2 in September 2023. */
         /* The values in local() are “PostScript names” that I retrieved via Font Book on MacOS. */
         @font-face {
             font-family: "Fira Code";
@@ -661,7 +661,7 @@
     <p>Thanks for scrolling all the way to the bottom of my résumé! I appreciate your interest. At this point, you might want to get in touch. Please do!</p>
     <ul class="contact">
         <li><a href="mailto:work@aviflax.com?subject=Let’s%20Go">work@aviflax.com</a></li>
-        <li>I’m based in <a href="https://en.wikipedia.org/wiki/White_Plains,_New_York">White Plains, New York</a>. I prefer to work as part of a mostly or fully distributed team, but I’d be happy to work from an office in the NYC area 1–3 days per week, depending on distance.</li>
+        <li>I’m based in <a href="https://en.wikipedia.org/wiki/White_Plains,_New_York">White Plains, New York</a>. I prefer to work as part of a mostly or fully distributed team, but I’m open to working from an office in the NYC area 1–3 days per week, depending on distance.</li>
     </ul>
 </section>
 
@@ -681,7 +681,7 @@
 </section>
 
 <footer>
-  <p>last updated: 2023-10-17 • <a href="https://github.com/aviflax/resume">full change history</a></p>
+  <p>last updated: 2023-10-18 • <a href="https://github.com/aviflax/resume">full change history</a></p>
 </footer>
 
 </body>
