--- a/index.html
+++ b/index.html
@@ -233,6 +233,7 @@
     <li>Full-cycle (design, testing, implementation, documentation, deployment, operations, maintenance, etc)
     <li>Highly collaborative (with co-workers, users, customers, etc)
     <li>Leading by example
+    <li>Mentoring and supporting co-workers
   </ul>
 
   <h3>On what kind of software</h3>
@@ -253,8 +254,13 @@
     <li>Committed to diversity &amp; inclusion
     <li>Enshrines kindness as cardinal
     <li>A shared understanding that candid and timely critisicm/feedback is a gift
-    <li>Knowlege sharing is via artifacts (documents, pages, etc) rather than conversations (email, chat, verbal)
+    <li>Shares knowlege via artifacts (documents, pages, tickets, etc) rather than conversations
+        (email, chat, verbal)
     <li>Invests in stability, sustainability, reliability, etc.
+    <li>Regularly reassesses and revises processes and policies
+    <li>Uses tasteful tools (e.g. <a href="https://linear.app">Linear</a> rather than
+        <a href="https://www.atlassian.com/software/jira">Jira</a>;
+        <a href="https://discourse.org">Discourse</a> rather than <a href="https://slack.com">Slack</a>)
   </ul>
 </details>
 
