--- a/climate/index.html
+++ b/climate/index.html
@@ -8,7 +8,7 @@
     
     <title>Avi Flax » Experienced full-cycle software engineer</title>
     <style>
-        /* Apparently Android browsers only got support for woff2 in September 2023 */
+        /* Apparently Android browsers only got support for woff2 in September 2023. */
         /* The values in local() are “PostScript names” that I retrieved via Font Book on MacOS. */
         @font-face {
             font-family: "Fira Code";
@@ -108,8 +108,8 @@
             font-weight: bold;
         }
 
-        h2,h3,h4,h5 {
-            font-weight: normal;
+        h2, h3, h4, h5 {
+            font-weight: 500;
             break: avoid-page;
         }
 
@@ -203,7 +203,7 @@
         @media print {
           html, body {
             /* The !important is an attempt to address the font size being huge in Firefox. */
-            font-size: 12pt !important;
+            font-size: 12pt !important; 
             margin: 0 auto;
             padding-left: 5%;
             padding-right: 5%;
@@ -226,33 +226,41 @@
   <!-- TODO: maybe replace with “Profile” -->
   <summary><h2>Objective</h2></summary>
   
-  <h3><b>What kind of work</b> I want to do</h3>
+  <h3>What kind of work I want to do</h3>
 
   <ul>
     <li>Hands-on
     <li>Full-cycle (design, testing, implementation, documentation, deployment, operations, maintenance, etc)
     <li>Highly collaborative (with co-workers, users, customers, etc)
     <li>Leading by example
+    <li>Mentoring and supporting co-workers
   </ul>
 
-  <h3>On <b>what kind of software</b></h3>
+  <h3>On what kind of software</h3>
   <ul>
     <li>Anything with a <b>direct positive impact</b> on
       <script>
         document.write(
           document.URL.includes('energy') || document.URL.includes('climate')
           ? '<b>the energy transition</b>'
-          : 'the organization')
+          : 'its users and the organization')
       </script>
   </ul>
 
-  <h3>At <b>what kind of org</b></h3>
-
+  <h3>At what kind of org</h3>
   <ul>
     <li>Mission-driven
     <li>People-first
-    <li>With clearly articulated values
-    <li>
+    <li>Committed to diversity &amp; inclusion
+    <li>Enshrines kindness as cardinal
+    <li>A shared understanding that candid and timely critisicm/feedback is a gift
+    <li>Shares knowlege via artifacts (documents, pages, tickets, etc) rather than conversations
+        (email, chat, verbal)
+    <li>Invests in stability, sustainability, reliability, etc.
+    <li>Regularly reassesses and revises processes and policies
+    <li>Uses tasteful tools (e.g. <a href="https://linear.app">Linear</a> rather than
+        <a href="https://www.atlassian.com/software/jira">Jira</a>;
+        <a href="https://discourse.org">Discourse</a> rather than <a href="https://slack.com">Slack</a>)
   </ul>
 </details>
 
@@ -580,7 +588,7 @@
     <ul>
         <li>2020
           <ul>
-          	<li>Delivered <a href="https://www.youtube.com/watch?v=3i-C7qbRGGQ">Set your data free with model-based architecture diagramming</a> at <a href="https://www.writethedocs.org/conf/">Write the Docs (Portland) 2020</a></li>
+            <li>Delivered <a href="https://www.youtube.com/watch?v=3i-C7qbRGGQ">Set your data free with model-based architecture diagramming</a> at <a href="https://www.writethedocs.org/conf/">Write the Docs (Portland) 2020</a></li>
           </ul>
         </li>
         <li>2019:
@@ -659,7 +667,7 @@
     <p>Thanks for scrolling all the way to the bottom of my résumé! I appreciate your interest. At this point, you might want to get in touch. Please do!</p>
     <ul class="contact">
         <li><a href="mailto:work@aviflax.com?subject=Let’s%20Go">work@aviflax.com</a></li>
-        <li>I’m based in <a href="https://en.wikipedia.org/wiki/White_Plains,_New_York">White Plains, New York</a>. I prefer to work as part of a mostly or fully distributed team, but I’d be happy to work from an office in the NYC area 1–3 days per week, depending on distance.</li>
+        <li>I’m based in <a href="https://en.wikipedia.org/wiki/White_Plains,_New_York">White Plains, New York</a>. I prefer to work as part of a mostly or fully distributed team, but I’m open to working from an office in the NYC area 1–3 days per week, depending on distance.</li>
     </ul>
 </section>
 
@@ -679,7 +687,7 @@
 </section>
 
 <footer>
-  <p>last updated: 2023-10-17 • <a href="https://github.com/aviflax/resume">full change history</a></p>
+  <p>last updated: 2023-10-18 • <a href="https://github.com/aviflax/resume">full change history</a></p>
 </footer>
 
 </body>
