add vax.help to examples
This should really be expanded, but I’m too tired right now.

#3

--- a/index.html
+++ b/index.html
@@ -594,7 +594,13 @@
     <summary><h2>Examples</h2></summary>
     <p>Most of my work is proprietary and private; this selection of things I’ve managed to release publicly doesn’t represent my full skillset.</p>
     <ul>
-        <li>2020
+        <li>March 2021:
+          <ul>
+            <li>Built and launched the website <code>ny.vax.help</code> to help people get
+                appointments for COVID-19 vaccines in New York State.
+                (<a href="https://github.com/aviflax/vax.help">Project repository</a>)
+          </ul>
+        <li>2020:
           <ul>
           	<li>Delivered <a href="https://www.youtube.com/watch?v=3i-C7qbRGGQ">Set your data free with model-based architecture diagramming</a> at <a href="https://www.writethedocs.org/conf/">Write the Docs (Portland) 2020</a></li>
           </ul>
