--- a/index.html
+++ b/index.html
@@ -598,8 +598,8 @@
     <h3>March 2021</h3>
     <ul>
       <li>Built and launched the website <code>ny.vax.help</code> to help people get
-          appointments for COVID-19 vaccines in New York State.
-          (<a href="https://github.com/aviflax/vax.help">Project repository</a>)
+          appointments for COVID-19 vaccines in New York State
+          (<a href="https://github.com/aviflax/vax.help">project repository</a>)
     </ul>
         
     <h3>2020</h3>
