--- a/index.html
+++ b/index.html
@@ -699,6 +699,7 @@
         <li><a href="https://www.instapaper.com/p/avi">Instapaper</a>
         <li><a href="https://stackoverflow.com/users/7012/avi-flax">Stack Overflow</a>
         <li><a href="https://github.com/aviflax">GitHub</a>
+        <li><a href="https://speakerdeck.com/aviflax">Slide decks</a>
     </ul>
 </details>
 
