no more purple links when printing

--- a/energy/index.html
+++ b/energy/index.html
@@ -245,6 +245,10 @@
             padding-right: 5%;
           }
 
+          a:visited {
+            color: blue;
+          }
+
           #print-version {
             display: none;
           }
