--- a/climate/index.html
+++ b/climate/index.html
@@ -244,6 +244,10 @@
             padding-left: 5%;
             padding-right: 5%;
           }
+          
+          a:visited {
+            color: blue;
+          }
 
           #print-version {
             display: none;
