--- a/index.html
+++ b/index.html
@@ -245,6 +245,10 @@
             padding-right: 5%;
           }
 
+          a:visited {
+            color: blue;
+          }
+
           #print-version {
             display: none;
           }
