add psychological capital to experience

--- a/climate/index.html
+++ b/climate/index.html
@@ -313,6 +313,27 @@
 <details id="prior-experience" class="experience">
     <summary><h2>Experience</h2></summary>
 
+  	<section id="psychological-capital">
+  		<h3>
+        <span class="time-frame">2023–2024</span>
+        Principal Software Engineer at Psychological Capital
+  		</h3>
+      <ul class="activities">
+        <li>Designed, implemented, and shipped an internal tool for rapidly testing many variations
+            of LLM invocations
+            <ul>
+              <li>stack: Google Sheets,
+                  <a href="https://www.google.com/script/start/">Google Apps Script</a>, JavaScript
+            </ul>
+        <li>Designed, implemented, and shipped a SaaS product to enable non-experts to craft, test,
+            and use LLM prompts with multiple LLM providers
+            <ul>
+              <li>stack: PostgreSQL, Clojure, <a href="https://htmx.org">htmx</a>, Docker,
+                  GitHub Actions, <a href="https://render.com">Render</a>
+            </ul>
+      </ul>
+   	</section>
+
     <section id="latacora">
       <h3>
         <span class="time-frame">2022–2023</span>
