no blue links when exporting
this is just easier than how I’ve been doing this to date (with
Shortcuts, which is flaky)

--- a/climate/index.html
+++ b/climate/index.html
@@ -254,6 +254,13 @@
           }
         }
     </style>
+
+    <script>
+      // no blue links when viewing page locally, for easier export
+      if (document.URL.startsWith('file')) {
+        document.head.insertAdjacentHTML('beforeend', `<style>a:visited{color:blue}</style>`)
+      }
+    </script>
 </head>
 <body>
 
