try having all details closed on load
to reduce cognitive load and visual noise on initial load, and be less
directive to readers as to what they should look at first

--- a/climate/index.html
+++ b/climate/index.html
@@ -269,7 +269,7 @@
     <h2 id="tagline">Experienced full-cycle software engineer</h2>
 </header>
 
-<details id="objective" open="true">
+<details id="objective">
   <!-- TODO: maybe replace with “Profile” -->
   <summary><h2>Objective</h2></summary>
   
