--- a/energy/index.html
+++ b/energy/index.html
@@ -756,7 +756,8 @@
 
 <section id="pdf-version">
   <h2>PDF Version</h2>
-  <p>If you’d like to e-mail this résumé, or add it to your applicant tracking system, you’re welcome to use <a href="Avi%20Flax’s%20Résumé%20Q2-2023.pdf">the PDF version</a>.</p>
+  <p>If you’d like to e-mail this résumé, or add it to your applicant tracking system, you’re
+     welcome to use <a href="../pdf/Avi Flax Resume (Q2–2024) (ET).pdf">the PDF version</a>.</p>
 </section>
 
 <section id="footnotes">
