START to add Omne to experience…
…needs a little more info!

--- a/index.html
+++ b/index.html
@@ -318,6 +318,24 @@
 <details id="prior-experience" class="experience">
     <summary><h2>Experience</h2></summary>
 
+    <section id="omne">
+      <h3>
+        <span class="time-frame">2024–2025</span>
+        Chief Software Architect at
+        <a href="https://www.linkedin.com/company/omnesoft/">Omnesoft</a>, a pre-market startup
+      </h3>
+      <ul class="activities">
+        <li>Designed and built a pre-alpha
+            <a href="https://en.wikipedia.org/wiki/Enterprise_resource_planning">
+                <abbr title="Enterprise Resource Planning">ERP</abbr></a> system with
+            a focus on manufacturing businesses
+            <ul>
+              <li>stack: PostgreSQL, .NET, C#, Docker, Azure, GitHub Actions,
+                  <a href="https://render.com">Render</a>
+            </ul>
+      </ul>
+    </section>    
+    
     <section id="psychological-capital">
       <h3>
         <span class="time-frame">2023–2024</span>
@@ -595,11 +613,14 @@
         <li><a href="https://kafka.apache.org/">Apache Kafka</a>
         <li><a href="https://aws.amazon.com/">Amazon Web Services (AWS)</a>
         <li><a href="https://aws.amazon.com/lambda/">AWS Lambda</a>
+        <li><a href="https://en.wikipedia.org/wiki/C_Sharp_(programming_language)">C#</a>
         <li><a href="https://clojure.org/">Clojure</a>
         <li><a href="https://www.docker.com/">Docker</a>
         <li><a href="https://github.com/features/actions">GitHub Actions</a>
         <li><a href="https://en.wikipedia.org/wiki/Java_(programming_language)">Java</a>
         <li><a href="https://en.wikipedia.org/wiki/JavaScript">JavaScript</a>
+        <li><a href="https://en.wikipedia.org/wiki/Microsoft_Azure">Microsoft Azure</a>
+        <li><a href="https://en.wikipedia.org/wiki/.NET">.NET</a>
         <li><a href="https://www.pulumi.com">Pulumi</a>
         <li><a href="https://www.python.org/">Python</a>
         <li><a href="https://www.ruby-lang.org/">Ruby</a>
