--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
     <section id="psychological-capital">
       <h3>
         <span class="time-frame">2023–2024</span>
-        Principal Software Engineer at Psychological Capital
+        Principal Software Engineer at <a href="https://mytrudy.com">Trudy</a>, a pre-market startup
       </h3>
       <ul class="activities">
         <li>Designed, implemented, and shipped an internal tool for rapidly testing many variations
@@ -351,8 +351,9 @@
         <li>Designed, implemented, and shipped a SaaS product to enable non-experts to craft, test,
             and use LLM prompts with multiple LLM providers
             <ul>
-              <li>stack: PostgreSQL, Clojure, <a href="https://htmx.org">htmx</a>, Docker,
-                  GitHub Actions, <a href="https://render.com">Render</a>
+              <li>stack: PostgreSQL, <a href="https://clojure.org">Clojure</a>,
+                  <a href="https://htmx.org">htmx</a>, Docker, GitHub Actions,
+                  <a href="https://render.com">Render</a>
             </ul>
       </ul>
     </section>
