Add a bullet to Omne

--- a/climate/index.html
+++ b/climate/index.html
@@ -320,21 +320,22 @@
 
     <section id="omne">
       <h3>
-        <span class="time-frame">2024–2025</span>
+        <span class="time-frame">2024–</span>
         Chief Software Architect at
         <a href="https://www.linkedin.com/company/omnesoft/">Omnesoft</a>, a pre-market startup
       </h3>
       <ul class="activities">
+        <li>Helped build and evolve the team and its strategy, processes, and culture
         <li>Designed and built a pre-alpha
             <a href="https://en.wikipedia.org/wiki/Enterprise_resource_planning">
                 <abbr title="Enterprise Resource Planning">ERP</abbr></a> system with
             a focus on manufacturing businesses
             <ul>
-              <li>stack: PostgreSQL, .NET, C#, Docker, Azure, GitHub Actions,
+              <li>Stack: PostgreSQL, C#, Docker, Azure, GitHub Actions,
                   <a href="https://render.com">Render</a>
             </ul>
       </ul>
-    </section>    
+    </section>
     
     <section id="trudy">
       <h3>
@@ -345,14 +346,14 @@
         <li>Designed, implemented, and shipped an internal tool for rapidly testing many variations
             of LLM invocations
             <ul>
-              <li>stack: Google Sheets,
+              <li>Stack: Google Sheets,
                   <a href="https://www.google.com/script/start/">Google Apps Script</a>, JavaScript
             </ul>
         <li>Designed and implemented a pre-alpha <abbr title="Software as a Service">SaaS</abbr>
             product to enable non-experts to craft, test, and use LLM prompts with multiple LLM
             providers
             <ul>
-              <li>stack: PostgreSQL, <a href="https://clojure.org">Clojure</a>,
+              <li>Stack: PostgreSQL, <a href="https://clojure.org">Clojure</a>,
                   <a href="https://htmx.org">htmx</a>, Docker, GitHub Actions,
                   <a href="https://render.com">Render</a>
             </ul>
