--- a/energy/index.html
+++ b/energy/index.html
@@ -307,13 +307,28 @@
   </ul>
 </details>
 
-<!--
 <details id="current-position" class="experience">
   <summary><h2>Current Position</h2></summary>
 
-
+  <section id="omne">
+    <h3>
+      <span class="time-frame">2024–</span>
+      Chief Software Architect at
+      <a href="https://www.linkedin.com/company/omnesoft/">Omnesoft</a>, a pre-market startup
+    </h3>
+    <ul class="activities">
+      <li>Helped build and evolve the team and its strategy, processes, and culture
+      <li>Designed and built a pre-alpha
+          <a href="https://en.wikipedia.org/wiki/Enterprise_resource_planning">
+              <abbr title="Enterprise Resource Planning">ERP</abbr></a> system with
+          a focus on manufacturing businesses
+          <ul>
+            <li>Stack: PostgreSQL, C#, Docker, Azure, GitHub Actions,
+                <a href="https://render.com">Render</a>
+          </ul>
+    </ul>
+  </section>
 </details>
--->
 
 <details id="prior-experience" class="experience">
     <summary><h2>Experience</h2></summary>
