--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
         #tagline {
           font-weight: 500; /* 500=medium (400=normal; 700=bold) */
           font-size: 160%
+          margin-bottom: 1em;
         }
 
         h2, h3, h4, h5, h6, details {
