fix syntax error in css

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
         #tagline {
           font-weight: 500; /* 500=medium (400=normal; 700=bold) */
-          font-size: 160%
+          font-size: 160%;
           margin-bottom: 1em;
         }
 
