--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <!-- Thanks for checking out my HTML and CSS skillz! This is all hand-rolled, fwiw. -->
 
-    <title>Avi Flax » Full-cycle, T-shaped, hands-on software architect/engineer</title>
+    <title>Avi Flax » Full-cycle, T-shaped, hands-on software engineer/architect</title>
     <style>
         /* Apparently Android browsers only got support for woff2 in September 2023. */
         /* The values in local() are “PostScript names” that I retrieved via Font Book on MacOS. */
@@ -270,7 +270,7 @@
     <h2 id="tagline">
         <a href="https://netflixtechblog.com/full-cycle-developers-at-netflix-a08c31f83249">Full-cycle</a>,
         <a href="https://en.wikipedia.org/wiki/T-shaped_skills">T-shaped</a>,
-        hands-on software architect/engineer
+        hands-on software engineer/architect
     </h2>
 </header>
 
