tweak objective: add “and/or climate change”

--- a/climate/index.html
+++ b/climate/index.html
@@ -295,7 +295,7 @@
       <script>
         const url = document.URL.toLowerCase();
         const energyRelated = url.includes('energy') || url.includes('climate');
-        const html = energyRelated ? '<b>the energy transition</b>' : 'its users and the organization';
+        const html = energyRelated ? 'the energy transition and/or climate change' : 'its users and the organization';
         document.write(html);
       </script>
     </li>
