remove date from PDF filename...
...I was overthinking this and I don’t have time to make it work
better into the future. This’ll probably be fine.

--- a/public/resume/pdf/index.html
+++ b/public/resume/pdf/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta http-equiv="Refresh" content="0; url=Avi Flax’s Resume (Sep 2025).pdf">
+    <meta http-equiv="Refresh" content="0; url=Avi Flax’s Resume.pdf">
 </head>
 <body></body>
 </html>
